cf_templates/cloudformation_ci_class/cf-class-ec2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: EC2 Instance with Instance profile role to access S3 buckets

Parameters:
  KeyName:
    Description: Key name to SSH to VM's. 
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  MyCICDEC2InstanceProfileRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action: 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: MyCICDEC2InstanceProfilePolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 's3:Get*'
                  - 's3:List*'
                Resource: '*'

  MyInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref MyCICDEC2InstanceProfileRole


  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: My SG with port 22, 8080 and 80 inbound
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'          
          ToPort: '80'
          CidrIp: 0.0.0.0/0
      VpcId:   !ImportValue
        Fn::Sub: 'CF-class-vpc-VPCID'
 
  MyStageVMInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-02ccb28830b645a41
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      IamInstanceProfile: !Ref MyInstanceProfile
      Tags:
        - Key: Name        
          Value: dev
      NetworkInterfaces:
        - GroupSet:
            - !Ref MySecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId:  !ImportValue
            Fn::Sub: 'CF-class-vpc-SubnetA'
      
      UserData: 
        Fn::Base64: |  
          #!/bin/bash
          sudo yum update
          sudo yum install ruby
          sudo yum install wget
          sudo yum -y erase java-1.7.0-openjdk.x86_64
          sudo yum -y install java-1.8.0-openjdk.x86_64
          sudo yum -y install java-1.8.0-openjdk-devel
          sudo yum -y install tomcat8
          cd /home/ec2-user
          wget https://aws-codedeploy-us-east-2.s3.amazonaws.com/latest/install
          chmod +x ./install
          sudo ./install auto      


  MyProdVMInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-02ccb28830b645a41
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      IamInstanceProfile: !Ref MyInstanceProfile
      Tags:
        - Key: Name        
          Value: prod
      NetworkInterfaces:
        - GroupSet:
            - !Ref MySecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId:  !ImportValue
            Fn::Sub: 'CF-class-vpc-SubnetB'
      UserData: 
        Fn::Base64: |  
          #!/bin/bash
          sudo yum update
          sudo yum install ruby
          sudo yum install wget
          sudo yum -y erase java-1.7.0-openjdk.x86_64
          sudo yum -y install java-1.8.0-openjdk.x86_64
          sudo yum -y install java-1.8.0-openjdk-devel
          sudo yum -y install tomcat8
          cd /home/ec2-user
          wget https://aws-codedeploy-us-east-2.s3.amazonaws.com/latest/install
          chmod +x ./install
          sudo ./install auto      


      
Outputs:
  StageAppURL:
    Description: Staging Application Access URL
    Value: !Sub 'http://${MyStageVMInstance.PublicDnsName}/ccdemo/hello'          
  ProdAppURL:
    Description: Prod Application Access URL
    Value: !Sub 'http://${MyProdVMInstance.PublicDnsName}/ccdemo/hello'
